# hasadna-iac

./: .gitignore  LICENSE  README.md  atlantis.Dockerfile  atlantis.yaml  kubernetes_tf_outputs.tf  main.tf  modules.tf  outputs.tf  outputs_vault.tf  pyproject.toml  variables.tf
.github/workflows/: atlantis.yml  ci.yml
bootstrap/: README.md  main.tf
docs/: backup.md  kubernetes.md  ssh.md  storage.md
modules/anyway/: aws_s3_buckets.tf
modules/apps/: atlantis.tf  main.tf  oknesset.tf  statuscake.tf  treebase-cards-deploy.tf  wordpress.tf
modules/datacity/: argocd.tf  ckan_hosts.tf  ckan_storage.tf  create_hmac_key.py  dns.tf  get_sites.py  main.tf  statuscake.tf
modules/hasadna/: argo_cd.tf  argo_cd_install.sh  argo_events.tf  argocd_github_webhook.tf  argocd_webhook.tf  auth.tf  aws_ec2_instances.tf  aws_s3_bucket_policies.tf  aws_s3_buckets.tf  backup.tf  backup_kopia_connect.sh  backup_rke2_cronjob.sh  backups.tf  cloudflare_dns_records.tf  cloudflare_dns_zones.tf  cluster2_management.tf  delete-old-logs.py  deploy_keys.tf  dev_servers.tf  dev_servers_keepalive_cronjob.sh  dns.tf  github.tf  grafana.tf  hasadna_k8s.sh  hasadna_k8s_github_app.tf  hasadna_nfs1.tf  hasadna_nfs2.tf  hasadna_ssh_access_point.tf  ingress_records.tf  jenkins.tf  kamatera.tf  kamatera_datacenters.tf  kamatera_images.tf  kamatera_networks.tf  kamatera_servers.tf  kubernetes_nodes_firewall.tf  locals.tf  main.tf  maintenance.tf  maintenance_rke2_cronjob.py  (+18 more)
modules/oknesset/: aws_s3_bucket_policies.tf  aws_s3_buckets.tf
modules/openbus/: aws_s3_bucket_policies.tf  aws_s3_buckets.tf  (+13 more)
(+4 files in other folders)
