[project]
name = "hasadna-iac"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.6",
]

#[dependency-groups]
#dev = [
#    "pytest>=8.3.5",
#]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[project.scripts]
#hasadna-iac = "hasadna_iac.cli:main"
